--- a/choichoi.html
+++ b/choichoi.html
@@ -13,6 +13,23 @@
 <h3>20221109Wed</h3>
 
 <p>
+もはや心の支えが引退者御用達の老子と菜根譚しかないおじさんです。こんにちは。<br>
+読み物として割と面白いので、特に「人生踏み外しちゃった系」のご同輩におすすめしたいです。<br>
+</p>
+
+<p>
+なんか、色々試行錯誤して、大学の研究室同期のLineグループを無駄にお騒がせして、git pagesにこのホムペを移植できてしまったので、当面はAWSもどっちもやっとく感じです。gitについては多分豪の者たちがいて（AWSにはいないと思ったのか？）散々ノウハウを書き散らかしていると思うので、そんなに真剣になんかを書く必要もないかと思います。面白がってやってはいますが、もう色々と時代が進みすぎちゃって、今更がんばってキャッチアップしても、しょーがねーんじゃねーの？と投げやりに思わないでもないです。
+</p>
+
+<p>
+なお、未だにgithubを無意識に「じっとはぶ」と発音してしまうのは如何ともし難いものがあります。<br>
+（声に出して）ぎっとはぶ。ぎっとはぶ。ぎっとはぶ。
+</p>
+
+<hr>
+<h3>20221109Wed</h3>
+
+<p>
 とりあえず、ホームページを作っていく上で、<br>
 ローカル環境とWebサーバのファイルの同期が取れると嬉しいよね？<br>
 という話を書きました。<br>
