--- a/awspage/rsync.html
+++ b/awspage/rsync.html
@@ -125,7 +125,7 @@ rsync -a --rsh=ssh --chmod=Du=rwX,Dgo=rX,Fu=rw,Fgo=r ~/homepage/public_html/ 【
 </p>
 
 <p>
-残りの2つの引数ですが、<code>'~/homepage/public_html/ 【ユーザ名】@【鯖名】:~/public_html'</code>は、比較する2つのディレクトリについて明示しています。どっちが前でどっちが後ろかはちょっとちゃんと調べてないですが、まあ「前がローカル、後ろがリモートのディレクトリ」で間違ってないようなので、そうしてます。<code>'【ユーザ名】@【鯖名】:~/public_html'</code>は最近になって見かけた表記方法なのですが（それか昔の事を忘れた）、仮にhoge.foobar.comというサーバのyurikaユーザのホームディレクトリ配下のpublic_htmlディレクトリなら、<code>'yurika@hoge.foobar.com:~/public_html'</code>なわけです。仮にAWSのインスタンスにパブリックドメインがついていない場合は鯖名はパブリックIPアドレスを指定するか、ローカル環境のhostsファイルをいじると良いでしょう。なお、AWSのインスタンスを再起動した時にパブリックIPが変わってしまうことに要注意です。
+残りの2つの引数ですが、<code>'~/homepage/public_html/ 【ユーザ名】@【鯖名】:~/public_html'</code>は、比較する2つのディレクトリについて明示しています。どっちが前でどっちが後ろかはちょっとちゃんと調べてないですが、まあ「前がローカル、後ろがリモートのディレクトリ」で間違ってないようなので、そうしてます。<code>'【ユーザ名】@【鯖名】:~/public_html'</code>は最近になって見かけた表記方法なのですが（それか昔の事を忘れた）、仮にhoge.foobar.comというサーバのyurikaユーザのホームディレクトリ配下のpublic_htmlディレクトリなら、<code>'yurika@hoge.foobar.com:~/public_html'</code>なわけです。仮にAWSのインスタンスにパブリックなドメインがついていない場合は鯖名はパブリックIPアドレスを指定するか、ローカル環境のhostsファイルをいじると良いでしょう。なお、AWSのインスタンスを再起動した時にパブリックIPアドレスが変わってしまうことに要注意です。
 </p>
 
 <h3>締めのことばとネタ元</h3>
