日記更新とどうでもいい修正です

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,39 @@
 随時更新予定
 
 <hr>
+<h3>20221113Sun</h3>
+
+<p>
+アホな息子が心配でなかなかお迎えが来ない、というレベルを通り越して、ムチャムチャ元気な両親と暮らしているおじさんです。<br>
+周りの人たちが健康なのは良いことです。こんにちは(^^)/<br>
+
+#枕詞
+</p>
+
+<p>
+今さっきTwitter様のお告げで知ったのですが、法務省には法定相続情報証明制度という、割と便利な制度があって、相続手続きで必要な被相続人と相続人の関係を証明する書類を楽な感じで発行してもらえるようです。一度書類が出来上がると5年間は有効らしいですし、すべての手続において無料だそうです。あら素敵(*^^*)
+</p>
+
+<p>
+
+→おそらく法務省のパンフだと思うのですが、PDFファイルがあります。<br>
+<a href="https://houmukyoku.moj.go.jp/homu/content/001331399.pdf">https://houmukyoku.moj.go.jp/homu/content/001331399.pdf</a>
+
+</p>
+
+<p>
+
+以下参照元ツイートでございます。<br>
+→<a href="https://twitter.com/Isimasa_blog/status/1591173944123752449">こちら</a>です。
+
+</p>
+
+<p>
+では良い一日を。
+
+</p>
+
+<hr>
 <h3>20221109Wed</h3>
 
 <p>
