--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
 <img src="image/top_image.jpg">
 
 <hr>
+
 <h2>最新情報はこちら</h2>
+
 <ul>
 <li><a href="choichoi.html">ちょいちょい一言入れてく日記</a>←随時更新</li>
+<li><a href="warikan.html">割り勘広場</a>←飲み会の時にどうぞ</li>
 </ul>
+
 <hr>
+
 <h2>最高にイカしたコンテンツたち</h2>
+
 <ul>
 <li><a href="readme.html">はじめにお読みください</a>←お願いします</li>
 <li><a href="aboutme.html">著者について</a></li>
@@ -39,7 +45,5 @@
 
 <hr>
 </body>
-
-
 
 </http>
