修正（語感の問題）

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <ul>
 <li><a href="choichoi.html">ちょいちょい一言入れてく日記</a>←随時更新</li>
-<li><a href="warikan.html">割り勘広場</a>←飲み会の時にどうぞ</li>
+<li><a href="warikan.html">ワリカン広場</a>←飲み会の時にどうぞ</li>
 </ul>
 
 <hr>
