新規記事と、ちょっとした変更です。

--- a/awspage/index.html
+++ b/awspage/index.html
@@ -29,7 +29,7 @@
 <li><a href=""></a></li>
 <li><a href=""></a></li>
 <li><a href=""></a></li>
-<li><a href=""></a></li>
+<li><a href="tex_install.html">【番外編01】TeXのインストールの件</a>（2022年11月14日）</li>
 </ul>
 
 <hr>
