--- a/tabun.html
+++ b/tabun.html
@@ -7,12 +7,19 @@
 <hr>
 <h1>yurufuwaIPAのホームページ</h1>
 <h2>多分やるかもしれないリスト</h2>
-2022年9月29日新規
+2022年9月29日新規<br>
+随時更新
 <hr>
 
-<h3>割りとやるかも編</h3>
+<h3>わりとやるかも編</h3>
 
 <ul>
+<li>TeX（てふ）のおさらい</li>
+<li>某PaizaでRailsとPHPの基本くらいは知っておく</li>
+<li>このホムペのAWSの件を進める</li>
+<li></li>
+<li></li>
+<li></li>
 <li></li>
 <li></li>
 <li></li>
@@ -23,12 +30,9 @@
 <h3>わりと頑張れないかも編</h3>
 
 <ul>
-<li>メルカリシステムの理解</li>
-<li>海外オークサイトの理解</li>
 <li>某ビールグラスのテストマーケ</li>
 <li>Google Project Management Certificateを受講する</li>
-<li>某昭和レトログッズの海外テストマーケ</li>
-<li></li>
+<li>なんかCourseraで受講してみる（英語）</li>
 <li></li>
 <li></li>
 <li></li>
