--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <ul>
 <li><a href="choichoi.html">ちょいちょい一言入れてく日記</a>←随時更新</li>
-<li><a href="warikan.html">ワリカン広場</a>←飲み会の時にどうぞ</li>
+<li><a href="dokusho.html">読書したかもリスト</a></li>
+<li><a href="tabun.html">やるかもしれないリスト</a></li>
 </ul>
 
 <hr>
@@ -40,10 +41,14 @@
 <li><a href="awspage/index.html">2020年代のホムペ講座</a></li>
 <li><a href="souba/index.html">相場放浪記</a></li>
 <li></li>
-<li><a href="tabun.html">多分やるかもしれないリスト</a></li>
 </ul>
 
 <hr>
+<ul>
+<li><a href="warikan.html">ワリカン広場</a>←飲み会の時にどうぞ</li>
+</ul>
+<hr>
+
 </body>
 
 </http>
