リンクを張り忘れました。

--- a/awspage/tex_install.html
+++ b/awspage/tex_install.html
@@ -26,8 +26,8 @@
     というか、DuckDuckGoでググったらすごく良いサイトが上位にあったので、<br>
     それを掲載して、感謝の思いを伝えたいと思いました。
 <ul>
-    <li>【大学生向け】LaTeX完全導入ガイド Windows編 (2022年)[https://qiita.com/passive-radio/items/623c9a35e86b6666b89e]</li>
-    <li>TeX入門[http://nalab.mind.meiji.ac.jp/~mk/labo/text/tex2022.pdf]←この資料でおさらいしてみます</li>
+    <li><a href="https://qiita.com/passive-radio/items/623c9a35e86b6666b89e">【大学生向け】LaTeX完全導入ガイド Windows編 (2022年)</a>[https://qiita.com/passive-radio/items/623c9a35e86b6666b89e]</li>
+    <li><a href="http://nalab.mind.meiji.ac.jp/~mk/labo/text/tex2022.pdf">TeX入門</a>[http://nalab.mind.meiji.ac.jp/~mk/labo/text/tex2022.pdf]←この資料でおさらいしてみます</li>
 </ul>
 
 </p>
