君、なんでまとめて更新しようと思わないの？的な更新。

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,18 @@
 随時更新予定
 
 <hr>
+<h3>20221114Mon</h3>
+
+<p>
+    TeXのインストールをしたので、一応<a href="awspage/tex_install.html">メモ書き</a>しました。<br>
+    というか、すごい良いサイトがあるので、そのサイトへのリンクだけです。
+</p>
+<p>
+    ネタはちょいちょいあるものの、いい感じに時間管理ができていないのか、それとも単純に書く時間がないのか。<br>
+    やることが発散してしまうタイプなので、たぶん定期的に棚卸しして「選択と集中」を実施する必要があるのかと思ってます。
+</p>
+<hr>
+
 <h3>20221113Sun</h3>
 
 <p>
