--- a/awspage/tex_install.html
+++ b/awspage/tex_install.html
@@ -22,6 +22,13 @@
 <a href="rsync.html">rsyncの回</a>で、TeXをおさらいしようかな？とか書いたわけですが、<br>
 実際にTeXをWindows11環境にインストールしてみました。
 </p>
+
+<p>
+    インストールの過程で、ものすごくたくさんのファイルをダウンロードしたので、<br>
+    夕方ごろに酒をチビチビ飲みながら作業し始めたのですが、なんか最終的に作業の区切りがついたのが深夜0時前になりました。<br>
+    そういえば、ダウンロードしている間は放置する、とかはあんまり考えてなかったです。
+</p>
+
 <p>それで、その手順についてイチイチ書く必要がない、<br>
     というか、DuckDuckGoでググったらすごく良いサイトが上位にあったので、<br>
     それを掲載して、感謝の思いを伝えたいと思いました。
