いやーまたやっちゃった。ははは。

--- a/awspage/rsync.html
+++ b/awspage/rsync.html
@@ -17,6 +17,7 @@
 
 <p>2022年11月9日新規</p>
 <p>2022年11月9日更新（割とどうでもいいけど、一部文言がおかしかったのを修正）</p>
+<p>2022年11月15日更新（rsyncの-aの記述ついて、明らかに間違っていたので調査中）</p>
 
 <hr>
 
@@ -115,6 +116,13 @@ rsync -a --rsh=ssh --chmod=Du=rwX,Dgo=rX,Fu=rw,Fgo=r ~/homepage/public_html/ 【
 </p>
 で、コマンドラインのオプションについて書いておきます。<br>
 <code>'-a'</code>はアーカイブモードとかいうやつで、転送前に圧縮してくれるようです。ファイルが無駄にでかいと圧縮伸張に時間がかかるかもしれないですが、転送時間は未圧縮時よりかなり改善すると思われます。まあ、htmlファイル程度だと不要かもしれないですが、重めの画像ファイルを何回も転送していると、ちょっと差が出るかもしれないです。もしホムペごっこ以外なガチな目的で使う場合は、その辺のトレードオフは各自適当に検証してみてください。
+</p>
+<p>
+    【追記】上記の記述について、明らかに間違っているようなので、いずれ修正します。<br>
+    私の解釈では-aについて、転送前に圧縮する（本来だったら--compress -z）だと思っていたのですが、<br>
+    どっちかというとtarに近い感じなのかもしれないです。<br>
+    とりあえずはこの-aの箇所だけはスルーしていただければと思います。<br>
+    （うわー、ヤベえ。これ某社の時だったら、ここぞとばかりに詰められるやつじゃん。＼(^o^)／オワタ）
 </p>
 
 <p>
