--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,35 @@
 随時更新予定
 
 <hr>
+<h3>20221115Tue</h3>
+
+<p>
+    ちょっと前に書いた<a href="awspage/rsync.html">rsyncについて</a>ですが、明らかに間違っているというか、
+    そこはかとない違和感を感じつつ、あんまり深掘りしないでテキトーに書いてしまった部分が案の定間違ってました。
+</p>
+
+<p>
+    期せずして、この手の事をやらかした時の当時の感覚がフラッシュバックしかねない感じです。ははは(^_^;)
+</p>
+
+<p>
+    週末あたりから、手元のWindows11をProにアップグレードしまして、Hyper-V ✕ Ubuntuしていました。
+    いやこの場合、Ubuntu ✕ Hyper-Vなんですかね？おじさんよくわからないですが。
+    で、仮想スイッチとUbuntuのネットワーク周りの設定で悩んだあげく、rsyncみたいな「かゆいところに手が届くけどWindows版がないアプリ」を動かしたい、みたいな、
+    ユーザレベルでの細かい要求はWSL（Windows Subsystem for Linux）で解決してしまいそうなので、またもやあんまりよろしくない脱力感を感じております。
+</p>
+
+<p>
+    というか、そこで「wslのUbuntuさんにデフォでrsync入ってたら、もうあの記事の出だしバカすぎだな」と思って、ターミナルでrsyncと打ってみたら、
+    期待した通りデフォで入ってまして(^ρ^)、しかもその時に出てきたオプション一覧を何となくジーと見ていたら、今回の大間違いに気づいたわけです。
+    いやー、俺持ってんな。ケースケホンダばりに。ちがうベクトルで。ははは(^_^;)
+</p>
+
+<p>
+    (´；ω；｀) |お手洗♂|
+</p>
+
+<hr>
 <h3>20221114Mon</h3>
 
 <p>
