ちょっと語ってみました。お酒といっしょに。

--- a/awspage/index.html
+++ b/awspage/index.html
@@ -24,7 +24,7 @@
 <li><a href="">サーバーっぽいアレ</a>←工事中</li>
 <li><a href="">httpd的なアレ</a>←工事中</li>
 <li><a href="">ユーザ管理的なアレ</a>←工事中</li>
-<li><a href="">HTMLタグ直打ちなアレ</a>←工事中</li>
+<li><a href="taginput.html">HTMLタグ直打ちなアレ</a>←作業中</li>
 <li><a href="rsync.html">クラサバ間で同期するアレ</a>（2022年11月9日）</li>
 <li><a href=""></a></li>
 <li><a href=""></a></li>
