--- a/dokusho.html
+++ b/dokusho.html
@@ -12,7 +12,7 @@
 <hr>
 
 <ul>
-<li>BREATH 呼吸の科学 （著）ジェームズ・ネスター （訳）近藤隆文</li>
+<li>BREATH 呼吸の科学 （著）ジェームズ・ネスター （訳）近藤隆文（2022年11月半ば読了）</li>
 <li></li>
 <li></li>
 <li></li>
