Courseraはじめました。普通に英語いける。

--- a/tabun.html
+++ b/tabun.html
@@ -11,6 +11,12 @@
 随時更新
 <hr>
 
+<h3>とりあえず始めた編</h3>
+<ul>
+<li>Google Project Management Certificateを受講する</li>
+<li>Google Data Analyticsを受講する</li>
+</ul>
+
 <h3>わりとやるかも編</h3>
 
 <ul>
@@ -31,8 +37,6 @@
 
 <ul>
 <li>某ビールグラスのテストマーケ</li>
-<li>Google Project Management Certificateを受講する</li>
-<li>なんかCourseraで受講してみる（英語）</li>
 <li></li>
 <li></li>
 <li></li>
