「英語で学ぶ」ってやつっすね。

--- a/choichoi.html
+++ b/choichoi.html
@@ -9,6 +9,48 @@
 <h2>ちょいちょい一言入れてく日記</h2>
 随時更新予定
 
+
+<hr>
+<h3>20221121Tue</h3>
+
+<p>
+    今まで「そんなにこのホームページを見てもらえないだろうなあ」という前提で書いてきたので、
+    その延長線上でちょっとくらいは自慢話っぽい事を書いても良いと思うので。
+    実際は全部講義が終わって、知識が身についたり、資格の類を取れないと何の意味もないわけですが。
+</p>
+
+<p>
+    Courseraというe-learningのサイトがありますが、アレの中にGoogleさんの講義がいくつかあります。
+    で、前から、”英語で講義を受ける”という事がちょっと気になっていて、
+    「英語スキル的にダメなら速攻でやめる」という事で、
+    Project Management Cerfiticateと、Data Analytics Cerfiticateというのを昨日の未明から突然やっております。
+    細かい英語タイトル名はよくわかっていないのですが、プロジェクトマネージメントとデータ分析系の講義です。
+    なんか急に意識高い系になった感がありますが。
+</p>
+
+<p>
+    で、自分の中で最大のポイントであった「英語で何かする上で困ることがあるか？」なのですが、
+    そのGoogleさんのネット講義を受ける範囲内であれば、そんなに問題にはならないっぽい、
+    という感触があります。
+    そこからの問題は、「講義の内容について的確に英語でアウトプットできるのか？」になっていくわけですが、
+    そうであっても、リーディング、リスニング、ライティングについては、
+    少なくとも「出鱈目なくらいダメ」とか「全くのトンチンカン」という事はない、というのが自己評価です。
+    というか、このまま地道に続けていればちゃんと修了できそうです。
+</p>
+
+<p>
+    先日英語に関して文章を書いたわけですが、
+    40代になってから再学習して、そのはてにエイゴ業界的な何かとか、
+    TOEICとか英検がマジでイヤになって、
+    それでいて試験を受けないまでも地味に英語のインプットを続けて来た結果が割とマシだったので、
+    「ああ、こういう”短期集中型”でない努力も必要なんやね」と思ったり、思わなかったり。
+    というお話でした。
+</p>
+
+<p>
+    最近、ぜんぜん一言日記じゃないなあ。
+</p>
+
 <hr>
 <h3>20221115Tue</h3>
 
