愚行権の行使

--- a/choichoi.html
+++ b/choichoi.html
@@ -9,9 +9,29 @@
 <h2>ちょいちょい一言入れてく日記</h2>
 随時更新予定
 
+<hr>
+<h3>20221123Wed</h3>
+
+<p>
+    なんか、”意識高い系”の度合いが増してきてまして。
+    Courseraからのサブスク値引きメールにホイホイ乗っかって、Coursera Plus（1年講義受け放題）という、
+    よくわかんないけど私めにとってはクレイジーな課金しました。
+</p>
+
+<p>
+    現在受けている2つのGoogleさんの講義がまだ無料お試し版で、かつ、それをキャンセルして年間サブスクに移行しても、
+    現状の受講状況がキャンセルされない事が確認できたので、「まあ、命と金があるうちに使っとくか」と。
+</p>
+
+<p>
+    どう考えても私の現状では海外留学とか、
+    ふらっと英語で交流するようなリアルセミナーを受講するとかは色々と不可能なので、
+    やれる範囲内で蛮勇を発揮してみようかと思ってます。いや、まさに蛮勇ですよ。
+    「なんか面白そう」以外の動機がない愚行権の行使ですよ。
+</p>
 
 <hr>
-<h3>20221121Tue</h3>
+<h3>20221121Mon</h3>
 
 <p>
     今まで「そんなにこのホームページを見てもらえないだろうなあ」という前提で書いてきたので、
@@ -23,7 +43,7 @@
     Courseraというe-learningのサイトがありますが、アレの中にGoogleさんの講義がいくつかあります。
     で、前から、”英語で講義を受ける”という事がちょっと気になっていて、
     「英語スキル的にダメなら速攻でやめる」という事で、
-    Project Management Cerfiticateと、Data Analytics Cerfiticateというのを昨日の未明から突然やっております。
+    Project Management Certificateと、Data Analytics Certificateというのを昨日の未明から突然やっております。
     細かい英語タイトル名はよくわかっていないのですが、プロジェクトマネージメントとデータ分析系の講義です。
     なんか急に意識高い系になった感がありますが。
 </p>
