どうでもいい話ですが。

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,22 @@
 随時更新予定
 
 <hr>
+<h3>20221129Tue</h3>
+<p>
+    割とどうでもいい情報ですが、「接点活性剤はクレ556で代用可能」です。
+</p>
+
+<p>
+    今までBluetoothで使っていたスピーカーについていた、ピンジャックをノートPCに繋いだのですが、
+    案の定錆びてまして、まともに音が出ませんでした。
+    しばらく新しいスピーカーを買うか思案していたのですが、ふと弟に教わった上記の件を思い出しました。
+    で、解決しました。
+</p>
+<p>
+    なんというか、マイルドヤンキーって結構強いですよね。マジで。
+</p>
+
+<hr>
 <h3>20221123Wed</h3>
 
 <p>
