なんか本が読み終わったようですよ。

--- a/dokusho.html
+++ b/dokusho.html
@@ -12,8 +12,8 @@
 <hr>
 
 <ul>
-<li>BREATH 呼吸の科学 （著）ジェームズ・ネスター （訳）近藤隆文（2022年11月半ば読了）</li>
-<li></li>
+    <li>バカと無知 （著）橘玲 （2022年12月4日読了）</li>
+    <li>BREATH 呼吸の科学 （著）ジェームズ・ネスター （訳）近藤隆文（2022年11月半ば読了）</li>
 <li></li>
 <li></li>
 <li></li>
