--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,14 @@
 随時更新予定
 
 <hr>
+<h3>20221204Sun</h3>
+
+<p>
+    押忍。ワークマンの『建さん』という靴について書きました。<br>
+    →<a href="kataru/kensan.html">こちら</a>です。
+</p>
+
+<hr>
 <h3>20221129Tue</h3>
 <p>
     割とどうでもいい情報ですが、「接点活性剤はクレ556で代用可能」です。
