--- a/kataru/index.html
+++ b/kataru/index.html
@@ -13,6 +13,7 @@
 
 <h2>書いたもの一覧</h2>
 <ul>
+<li><a href="kensan.html">建さん、という”ランニングシューズ”について</a>（2022年12月4日）</li>
 <li><a href="eigojuyou.html">情報系だと英語やっぱ大事だった件</a>(2022年11月7日)</li>
 <li><a href="undounou.html">【読書】運動脳</a>(2022年11月6日)</li>
 <li><a href="shimanto2022.html">四万十川オンライン完走記</a>(2022年10月23日)</li>
