陸上選手はヨコシマな目で見れないです。

--- a/choichoi.html
+++ b/choichoi.html
@@ -13,6 +13,31 @@
 <h3>20221204Sun</h3>
 
 <p>
+    ちょっと真面目な話していいですか？
+</p>
+
+<p>
+    ビールを飲みながらYouTubeを見ていたら、女子陸上長距離の動画がレコメンドで出たんですよ。
+    で、プレビューで見てビビって動画開いたのですよ。マジでヤベえ選手の3,000mだったんですが、
+    動画の出だしの時点で「うわこの子背中の強さがヤベえ！
+    中学生なのにほぼ上体がブレずにちゃんと力入ってるレベルやんけ！
+    どんな指導者が付いてるんやろ？」
+    と思って、思わずDuckDuckGoでググってみたのです。<br>
+    <br>
+    でも、背中の強さとかフォームについて語っていそうな記事はひとつもなくて、
+    完全によくわからないアイドル状態になっていて、「ちょ、お前らそこしか見とらんの？マジ？」と思って、
+    さらに記事タイトルを見た感じ「そこの部分については本人は言及してもらいたいわけではないのでは？
+    こんな状況で色々と大丈夫かこの子？」と、軽く絶望を憶えました。
+</p>
+
+<p>
+    自分が別の意味で変態というか、現状友達も彼女もいない独身者な理由がほの見えてしまった感じです。
+</p>
+
+<hr>
+<h3>20221204Sun</h3>
+
+<p>
     押忍。ワークマンの『建さん』という靴について書きました。<br>
     →<a href="kataru/kensan.html">こちら</a>です。
 </p>
