some change like p.s.

--- a/choichoi.html
+++ b/choichoi.html
@@ -13,6 +13,17 @@
 <h3>20221210Sun</h3>
 
 <p>
+    今回の更新ですが、コマンドラインでgitをいじったのは初めてでした。
+    仕事でもソースコードをいじる事が全くないインフラ担当者だったので。
+    で、間違えて違うユーザでコミットとプッシュをしてしまったのですが、
+    幸か不幸か「取り消し方」を知ったのでちょうど良かったです。
+    この手の作業で、いきなり仕事で使うことになって焦るよりは良いと思うのです。
+</p>
+
+<hr>
+<h3>20221210Sun</h3>
+
+<p>
     こんばんは。選択肢が多すぎると逆に考えることが多くなって自由を失うパターンにハマっている気がしないでもないです。
 </p>
 
