Have a good night

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,7 +10,40 @@
 随時更新予定
 
 <hr>
-<h3>20221210Sun</h3>
+<h3>20221211Sun</h3>
+
+<p>
+    おいすー（なぜ土曜の夜にそれをしなかった）。
+    最近「だいぶ遅れてきたミニマリスト」を目指しているおじさんです。
+</p>
+
+<p>
+    マジで部屋を整理してモノを減らしてみたら、かなりいい感じだったのですよ。
+    まあ、それとは別でモノが増えたわけですが、かなり整った感じにはなりました。
+</p>
+
+<p>
+    で、その過程のひとつとして、既読本、あるいは積読で放置された本の処分をしているのですが、
+    和書については自力でブックオフあたりのリアル古本屋さんにすると、運び込みが非常に面倒臭いし、
+    本によっては店員さんに「うわこいつムッチャ怪しいな」と言われているのが聞こえてきそうなので、
+    今回はネット集荷で済ませられる古本屋さんに頼ってみました。
+</p>
+
+<p>
+    だいぶ前からバリューブックスさんのお世話になっていたので、かつ、たまたま古本を購入したら、
+    買い取りのチラシが付いていたので、今回もお願いしたのですが、
+    「まあ、1,000円から2,000円くらいなんやろなあ」「でも処分の手間を省きたかっただけだしな」
+    と思って査定結果を見てみたら5,500円弱の査定が出て、しかも「言い値で良いです設定」をしたら、
+    2日ほどで振り込まれるようなので、かなりビビりました。
+</p>
+
+<p>
+    などとインフルエンサーの案件くさい事を書きましたが、
+    大量の古本の処分で困っている人もいるでしょうし、紹介する意味はあるかと思いまして。
+</p>
+
+<hr>
+<h3>20221210Sat</h3>
 
 <p>
     今回の更新ですが、コマンドラインでgitをいじったのは初めてでした。
@@ -21,7 +54,7 @@
 </p>
 
 <hr>
-<h3>20221210Sun</h3>
+<h3>20221210Sat</h3>
 
 <p>
     こんばんは。選択肢が多すぎると逆に考えることが多くなって自由を失うパターンにハマっている気がしないでもないです。
