I made the table on my working desk

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,52 @@
 随時更新予定
 
 <hr>
+<h3>20221212Mon</h3>
+
+<p>
+    こんばんは。あんまりホムペの記事をちゃんと書こうという気がなく、
+    あいかわらず俺通信が続きます。
+</p>
+
+<p>
+    先日ディスプレイ用のアームを設置した件を書きました。
+    で、ディスプレイの位置をあげてみたら、なんか立ち姿勢で使える感じだったんですよ。
+    それで、高さ調整で机上に置くキーボードとトラックボール用の台を探してみたのですが、あまりいい感じのものがなく、
+    しかたなく自力で作りました。と言っても、ホムセンで木材を切ってもらって、持ち帰ってから釘打ちするだけです。
+
+</p>
+
+<p>
+    ちなみに台の寸法は幅60x奥行30x高さ27センチくらいです。人によって適切な高さは違うと思いますが、
+    天板のサイズはだいたいこれくらいにしておくと、フルサイズキーボードとトラックボールとパームレストを
+    おけるくらいになります。私めはパームレストは使ってないですが。
+    わざわざ恥をかきに行かなくていいとは思いますが、木材の選択を誤ったらしく、
+    木材だけで4,000円以上かかってしまいました。
+    見た目高い材料というわけでもなく、でもぱっと見味がある感じではあります。
+</p>
+
+<p>
+    それでスタンディングデスクっぽい、割りと良い感じの作業環境ができたのですが、
+    副産物として、というか、その机上台を横に立てて置くと、なんとサイドテーブルに早変わりするわけです。
+    たまたまサイズ的にバッチリだっただけなのですが、使わない時の置き場所の問題と、
+    前からほしいと思っていたサイドテーブルの問題が一気に解決しました。
+    いや、俺やっぱり持ってるわ。今回はかなり良い方向で。
+</p>
+
+<p>
+    そんなお話ばっかりしてますが、一応Courseraやったり、年末の家事をこなしたりして、
+    なんだかんだ楽しく暮らしております。
+</p>
+
+<p>
+    で、立ち姿勢だと、Courseraの講義をうけつつ、ぷるぷる気功をする事が可能になります。
+    ぷるぷる気功というのは、場所によってはシェイクという呼び方らしいですが、
+    まあ、体をゆすって気を集めるみたいな感じのやつです。最近寝起きにスワイショウという、
+    やはり気功の体操と組み合わせてやってますが、日々の生活が割りといい感じです。
+    そのあたりの事は誰も興味がないと思いますが、コツが分かってきたので、気が向いたら書きます。
+</p>
+
+<hr>
 <h3>20221211Sun</h3>
 
 <p>
