--- a/choichoi.html
+++ b/choichoi.html
@@ -35,6 +35,19 @@
 </p>
 
 <p>
+    【追記】今気づきましたが、ホムセンで他のものも買っていまして、トータルで4,300円くらいでしたが、
+    木材とカット費用で3,500円弱、カット費用が1カット50円で4カットなので200円、ということで木材にかかったお金は3,500円以下です。
+    一晩たってあらためて仕上がり品を見た感じ、木材のクオリティはかなり良いです。素人が作ったのでちょっと精度が悪くて若干ガタガタしますが。
+    なにか合板とかにした場合だと、もっと安くなるかもしれないですが、その場合は普通に釘打ちできるのか？とかはわからないです。
+</p>
+
+<p>
+    【追記2】ほぼ中学の技術家庭科の知識だけで作っているので、その時の材料っぽくないとちょっとわからないのです。
+    今アラフィフくらいのおじさんだと、中学の時に本棚とか作りましたよね？
+    自分としては実用性を意識した割りと良いデザインだったので、高校のときは文庫本置場にしていましたし、今も捨てずに昔のDVD置場として使ってます。
+</p>
+
+<p>
     それでスタンディングデスクっぽい、割りと良い感じの作業環境ができたのですが、
     副産物として、というか、その机上台を横に立てて置くと、なんとサイドテーブルに早変わりするわけです。
     たまたまサイズ的にバッチリだっただけなのですが、使わない時の置き場所の問題と、
