--- a/kataru/staff.html
+++ b/kataru/staff.html
@@ -27,10 +27,14 @@
     ジョギング時には、パルクールというほどエクストリームではないものの、
     一本橋走行できそうな場所を常に探し始めたり、無駄に土手のコンクリート壁を登り降りしたり、
     だんだん一般的なジョギングイメージのキャッキャウフフな状況はありえなくなってきました。
+</p>
+
+<p>
     心の何処かで女子にモテたい的な気持ちが（50に近づいても）あったはずなのですが、
     一旦走り出したらワケわからん方向に爆走しがちになっています。
     そのせいで、ジムのトレッドミルで女子トナラーが現れるというレアシチュでも、
-    ランが乗ってきたという理由だけでガン無視してしまうという、人生最大の失態を演じてしまったりします。
+    ランが乗ってきたという理由だけで20分近くガン無視してしまうという、
+    人生最大の失態を演じてしまったりします。
 </p>
 
 <p>
