--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,47 @@
 随時更新予定
 
 <hr>
+<h3>20221221Wed</h3>
+
+<p>
+    おはようございます。家庭内帰国子女です。意味が伝わらんかもしれませんが、
+    自室（なんちゃって外国）＜ー＞ 居間（日本）みたいになりかねない状況だし、
+    だんだん自分がウザキャラ化している気がするんですよね…
+</p>
+
+<p>
+    不特定多数が見ているという前提でホムペを書いてしまうと、
+    大したスキルもないのに自慢しているシラケた状況が怖くて、あるいは、
+    逆に意図せずマウンティングになる事が怖くて、結果何も書けなくなる、
+    という自分の意識をだんだん理解してきました。
+</p>
+
+<p>
+    それはそれとして、Courseraの授業を取りすぎて、エライことになっております。
+    ただ、英語を使った勉強することが思った以上に楽に感じるので、
+    あまり無理にならない程度にテキトーにやろうと思っています。
+    キングオブテキトーの高田純次ばりに。
+    途中の小テストで締め切りが設定されているのですが、別にちゃんと守らなくても普通に受講できるし、
+    困るのは他の生徒と協力しないといけないピアレビューとかいうやつだけのようなので。
+    一応は次の締め切りまでにどのくらいの作業量になるかは把握しながらやっています。
+    そして、それをやると結局締切に間に合わせたくなるという。
+</p>
+
+<p>
+    先日作った立ち作業用の机上台なのですが、たった今、読書リストに記入するために床で作業がしたくなり、
+    たまたま敷きっぱなしだったヨガマットの前に置いてみたら、なんと普通に机として機能するのですよ。
+    姿勢を意識しないと、若干背中が丸まりますが。
+    ヨガマットとかアラフィフおじさんの割に女子力高すぎですが、ヨガについても気が向けば書きたい感じです。
+</p>
+
+<p>
+    で、一瞬ですが、「もしかして自分のしたい消費生活って、このDIY机みたいな感じなのかも」と思わないでもないです。
+    人によってはケチくさいと思うかもしれませんが、
+    DIYの最大のメリットって「その道のプロを正しくリスペクトできる」って事かと。
+    素人じゃどうやったってお仕事レベルの作業を毎日こなすなんて出来ないですから。
+</p>
+
+<hr>
 <h3>20221212Mon</h3>
 
 <p>
