I bought a desktop pc

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,37 @@
 随時更新予定
 
 <hr>
+<h3>20221222Thu</h3>
+
+<p>
+    なんというか、CourseraでJupyternoteいじって演習する講義を受けていて、
+    あと、スキャルをまた最近ちょいちょいやっていて、
+    これまでの環境はUbuntu on WSL + VS Codeだったわけですが、
+    「デスクトップPCにUbuntuを入れたら色々はかどりそうな気がする」
+    かつ「どうせオフィス系アプリ全然使わねーし、必要なときだけWindowsマシン使えばいいや」
+    と思って、某パラダイスのPCを購入しました。OSなしバージョンでそれ以外デフォ設定のはずでしたが、
+    さすがにそこまで安値になったという感はなかったです。でもコスパはだいぶ良いと評判の様ですね。
+</p>
+
+<p>
+    で、いきなりディスプレイポートに挿して起動したら、BIOS画面が出なくて一瞬焦ったり、
+    HDMIに挿してディスプレイポートをアクティブにしようとしたら、BIOS設定画面でなぜかマウスが使えてビビったり、
+    Ubuntuはここしばらく何回かインストールしているものの、20年前のFreeBSDあたりと比べてあまりに簡単インストールになっていて、
+    昔話をひとりつぶやきながら作業したり、とかしました。
+</p>
+
+<p>
+    で、購入したPCについては現状スペックも十分で、トラックボールを使おうとしたらBluetoothがなくて、
+    急遽電気屋さんにドングルを買いにいったりした以外は全く問題がない感じです。音もちゃんと出ます。
+</p>
+
+<p>
+    で、しばらくUbuntuの環境構築しつつ、講義も受ける感じになるかと思いますが、
+    Jupyternoteを使う作業はVS Codeに必要な拡張を足す程度で問題ないので、そんなに焦って準備しなくてもいい感じではあります。
+    このホムペ作業も全然できるようになっていますし。一応これからGitの設定がありますが。
+</p>
+
+<hr>
 <h3>20221221Wed</h3>
 
 <p>
