--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,39 @@
 随時更新予定
 
 <hr>
+<h3>20221229Thu</h3>
+
+<p>
+    よいおとしを（色々と早い）<br>
+    寒空の下、河原を駆け回る元気なおじさんです。<br>
+    寒さが深まったせいか、変なおじさん（私）がウロウロしているせいか、だいぶ人が減ったような。
+</p>
+
+<p>
+    複数のネット上のサービスが、コソッとユーザの属性を共有しているのは周知の事実なわけですが、
+    先日CourseraのGoogleプロマネ講義の6つのうち1つ目が終わって認定証を某転職SNSと連携したわけです。
+    そしたら、別の転職サービスの求人メールの内容に変化があったりして、かなりビビります。
+    今まで、若干英語スキルを考慮した求人もちらほらあったのは確かなのですが、
+    今朝見たメールでは、どういうわけだか同時通訳者を求める某金融コンサル某社の求人が混ざってました。
+    いや、同時通訳なんてできねーし。
+</p>
+
+<p>
+    正直な話、わりと若見えするにしても、もう歳をとったのは事実だし、結婚も子作りもしないだろうし、親類や地元の人たちなど、
+    身近な人たちともたれ合いながらマッタリ暮らすことになるのだろう、と思っています。
+    で、この先自分の人生は最低限2，3日テキトーに働いて最低限の生活費を稼いで、
+    稼げなくなった時点で山に入って自然に帰る程度で良いのでは？と思い始めています。
+    今の時点ですでに最低限すら稼いでいないわけですが。
+</p>
+
+<p>
+    「いやいや、仕事にフルコミットしろよ、結婚しろよ、子供作れよ、カネ稼いで贅沢しまくれよ」という向きもあるかもしれませんが、
+    今の世の中、命の危険を感じる程度の、というか実際に命の危険があった程度の負荷がかかる仕事とかするインセンティブって、
+    全然ないと思いませんかね？むしろ「老衰するまで無限に恩給くれよ」くらいに思っているのですが。
+    こういうのは、権利意識が肥大化した小市民、というヤツなのでしょうか？
+</p>
+
+<hr>
 <h3>20221222Thu</h3>
 
 <p>
