Have a nice weekend and new year

--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,46 @@
 随時更新予定
 
 <hr>
+<h3>20221231Sat</h3>
+
+<p>
+    みんな大好き（？）イーロンおじさんですが、
+    「買収してみたら陰謀論とか煽られてた話がほぼ事実でワロタわ」
+    とか言ってたそうで。
+    （残念ながら一次情報がどこにあるのか知らないのですが、字幕付き切り抜きは一応見ました）、
+    超絶金持ちになると、一周まわってそういう力技が可能だったりするのね、と変に感心してしまいました。
+</p>
+
+<p>
+    最近は安全性の観点から、ランニングとか、ウォーキングを真っ暗な中ではやらないようにしているのですが、
+    夜明け待ちの時間帯にYouTube動画のお姉さんと一緒に10分ヨガをやるのと、
+    朝の運動前は気功系の体操だけをやってから割とテキトーに過ごして、
+    日中の温かい時間帯に太極拳とかをやるのとで、どっちが運動のパフォーマンス（主観）が上がるか、
+    肩こり（最近なにかと僧帽筋にコリを感じる）が緩和するか、試してみました。
+</p>
+
+<p>
+    結論として、「ヨガとか太極拳とか気功とかの違いはともかく、
+    走る前はスワイショウのような動的ストレッチが良くて、
+    走ったあとは静的、動的どっちでもいいからストレッチすると捗る」
+    みたいな、最近の通説として割と普通っぽい感じになりました。
+    あと、「日中に太極拳をやったり、マジカルステッキ（物理）を振るだけで、僧帽筋が緩む」
+    とか、ついでですが、
+    「立禅をやるなら、やる前に太極拳をやっておいた方が、立禅後に体が固まらなくて捗る」
+    ということがわかりました。なお、マジカルステッキ（物理）は一般的には杖（じょう）と呼ぶようですね(^q^) 
+</p>
+
+<p>
+    あと、肩こり云々はタイピング時の姿勢がほとんどの原因っぽいので、思考の沼にハマっているときでも、
+    姿勢と呼吸の意識をした方がいいっぽいです。
+    あとやれそうな対策としては、デスクトップPCとディスプレイにアース線くっつけるくらいですかね？(^_^;)
+</p>
+
+<p>
+    まあ、あんまりコーヒー飲まないだけで、肩こりは解消するって説もありますが。
+</p>
+
+<hr>
 <h3>20221229Thu</h3>
 
 <p>
@@ -38,7 +78,7 @@
 <p>
     「いやいや、仕事にフルコミットしろよ、結婚しろよ、子供作れよ、カネ稼いで贅沢しまくれよ」という向きもあるかもしれませんが、
     今の世の中、命の危険を感じる程度の、というか実際に命の危険があった程度の負荷がかかる仕事とかするインセンティブって、
-    全然ないと思いませんかね？むしろ「老衰するまで無限に恩給くれよ」くらいに思っているのですが。
+    全然ないと思いませんかね？むしろ「老衰死するまで無限に恩給くれよ」くらいに思っているのですが。
     こういうのは、権利意識が肥大化した小市民、というヤツなのでしょうか？
 </p>
 
