--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,34 @@
 随時更新予定
 
 <hr>
+<h3>20230106Fri</h3>
+
+<p>
+    割とどうでもいい話ですが、庭木の剪定とかの野外作業をたまにします。
+    で、その時に作業用で履いているワークマンのジョガーがやたらといい感じでして、
+    年末も晴れた日中なら夏用の薄いやつで全然行けたのですが、
+    一応オールシーズンぽい厚手のやつも買ってみました。
+</p>
+
+<p>
+    品名がそのまま「ジョガーパンツ」で、品番がJG001です。
+    ユニクロもそうなんですが、作業用とか運動用のSサイズのズボンを買うと、自分の体で採寸したんじゃないかってくらい、
+    サイズ感がぴったりだったりして、かなり捗ります。モノによっては、太腿がぱっつんぱっつんだったり、
+    裾のお直しが必要だったりしますが、デザインを職人さん用に寄せているやつはたいてい行けるっぽいです。
+</p>
+
+<p>
+    もはや誰が知りたいのか、って話ですが、地下足袋とかも、ゴム底を縫い付けているタイプのサイズ感はそんな感じです。
+    作業内容にもよるのでしょうけど、お祭り用とかであっても貼付けているタイプはあんまり好きじゃないですね。
+    実はアディダスのアディゼロシリーズの一部も、日本人の職人さんタイプの足型を使っているのか、指先までやたらピッタリハマったりします。
+</p>
+
+<p>
+    こういう謎のフィット感を感じると、なんかマジで、情報技術ぽい仕事より、
+    庭師にでもなった方が良かったんじゃねーの？って気がしますね。最近。
+</p>
+
+<hr>
 <h3>20221231Sat</h3>
 
 <p>
@@ -24,7 +52,8 @@
     最近は安全性の観点から、ランニングとか、ウォーキングを真っ暗な中ではやらないようにしているのですが、
     夜明け待ちの時間帯にYouTube動画のお姉さんと一緒に10分ヨガをやるのと、
     朝の運動前は気功系の体操だけをやってから割とテキトーに過ごして、
-    日中の温かい時間帯に太極拳とかをやるのとで、どっちが運動のパフォーマンス（主観）が上がるか、
+    ウォーキング、ジョギングとは別で、日中の温かい時間帯に太極拳とかをやるのとで、
+    どっちが運動のパフォーマンス（主観）が上がるか、
     肩こり（最近なにかと僧帽筋にコリを感じる）が緩和するか、試してみました。
 </p>
 
