--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,19 @@
 随時更新予定
 
 <hr>
+<h3>20230107Sat</h3>
+
+<p>
+    某パイザさんに「超気になる」メッセージがちょいちょい届いているわけです。
+    で、なんとなく気が向いて、
+    東京の某社のカジュアル面談というのに応募しました。
+    で、リモートか、直接オフィスに行くかはちょっとわからないのですが、
+    とりあえず、何件か塩対応されて泣いてみる、
+    という過程を経ないとこの先どうにもならん気がしてまして。
+    まあ、「うわあ、めんどくさいヤツ来たわー」とは思われるでしょうね。たぶん。
+</p>
+
+<hr>
 <h3>20230106Fri</h3>
 
 <p>
