--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,39 @@
 随時更新予定
 
 <hr>
+<h3>20220109Mon</h3>
+
+<p>
+    なんかここのところ疲れ気味で、ウォーキングばかりになってしまっているのですが、
+    ほぼウォーキングとは言え今年入ってから昨日までの数字で60kmくらいになっている事に気づきました。
+</p>
+
+<p>
+    一般的に有酸素運動の目安って20分くらいから40分くらいまで、という事になっているはずですが、
+    それって、時速5kmで動いたとして、せいぜい2，3kmくらいなんじゃないですかね？
+    それで、最近の一番ひどいパターンで、ウォーキングのつもりでいつも通りにでかけて、
+    丘の上の某工場までの坂道をゆるジョグしつつ上がって、某所の割ときつい下りを、
+    腰の王子にインスパイヤされて、「スピードを殺さずに走る修行ごっこ」をやってみたりして、
+    帰ってきたら12km行ってました、平均時速7kmで、ネット走行時間が1時間40分でーす、みたいなパターンに陥ってしまって、
+    しかもその行程を終わった頃にはほぼ忘却している感じです。どういうウォーキングだよと。
+</p>
+
+<p>
+    どうでもいい話ですが、ほぼ忘却してしまうにしても
+    「ふだんでは考えられないエリアで、ふだん見ない感じの女性を見た」
+    とかだとしっかり憶えてますが。
+    わざわざ早朝の時間に一人で運動している若い女性とか、身体が動ける感じの女性はたいてい見てます。
+    色々と心配なんで。
+</p>
+
+<p>
+    若干脇道にそれましたが、別にタフガイ自慢ではなく、最近「運動依存」という、
+    精神医学の世界で正式にカテゴライズされていないけど、
+    ちょっと前にニュースに出てた懸念される症状、ってやつにハマりつつあるかな、と思うのですよ。
+    個人的には「人類だって動物なのだから、あんまり動かないのが正常だったら逆にヤバいだろ」とは思いますが。
+</p>
+
+<hr>
 <h3>20230107Sat</h3>
 
 <p>
