--- a/dokusho.html
+++ b/dokusho.html
@@ -20,7 +20,8 @@
 <ul>
     <li>22世紀の民主主義（著）成田悠輔 （2022年1月7日読了）</li>
     <li>禅、シンプル生活のすすめ（著）枡野俊明 曹洞宗徳雄山建功寺住職（2022年12月24日読了）</li>
-    <li>死は存在しない 最先端量子科学が示す新たな仮説（監修）やましたひでこ （2022年12月21日読了）</li>
+    <li>死は存在しない 最先端量子科学が示す新たな仮説（著）田坂広志 （2022年12月23日読了）</li>
+    <li>TJ MOOK ズボラさんでもできる！はじめての断捨離（監修）やましたひでこ （2022年12月21日読了）</li>
     <li>考える人のメモの技術（著）コクヨ株式会社 下地寛也（2022年12月中旬読了）</li>
     <li>バカと無知（著）橘玲 （2022年12月4日読了）</li>
     <li>BREATH 呼吸の科学 （著）ジェームズ・ネスター （訳）近藤隆文（2022年11月半ば読了）</li>
