--- a/choichoi.html
+++ b/choichoi.html
@@ -10,6 +10,31 @@
 随時更新予定
 
 <hr>
+<h3>20220110Tue</h3>
+
+<p>
+    とりあえずUbuntuマシンでリモート会議ができるように、家電屋さんの売り場で一番安いWebカメラ（Logicool C270n）を買って、Ubuntuで設定してみました。
+    というか、別に難しい事をしなくても、デバドラ関係はデフォで解決済みで、USBに挿してCheeseというデフォでインストールされているアプリを立ち上げたら、
+    無事に画面にパッとしない感じのおじさんの顔が映りました。
+    そのあとZoomとSlackをインストールしたら特に問題なく使えるようになりました。でも、安いカメラなので、
+    あんまり画質が良くないです。良すぎても色々と老けているのがバレる感じでしょうけど(^_^;)
+</p>
+
+<p>
+    で、ちょい前にWindowsPCでGoProをWebカメラとして使えるようにしてみたのですが、Ubuntuでもそれほど厳しくはない程度にめんどくさい設定をしたら、
+    使えたことには使えました。しかも画質も安いWebカメラより断然良かったのです。でも、GoPro内蔵のマイクが使えないようで、ガチで使いたいなら、
+    ヘッドセットなり、リモート会議用マイクなりを買ってこないといけないっぽいです。さらに言えば、このよくわからない実行形式ファイルは、
+    まだ開発途上のようで、まともに使おうとは思わない方が良いっぽいようです。
+    そんなわけで、全体的なクオリティを上げたかったら、もうちょっと上等なWebカメラに買い直すのが無難な選択、という感じがしないでもないです。
+</p>
+
+<p>
+    GoProの件は、Githubのコレ→ https://github.com/jschmid1/gopro_as_webcam_on_linux を見れば大体わかると思いますが、
+    このサイトでも日本語でまとめても良いかもしれません。この手のツールって、ワンライナーでよそにあるシェルスクリプトをダウンロードして、そのままsudo bashに流してしまう、
+    みたいな色々とすごい事を高確率でユーザにやらせているわけですが、不安なら一応中身の確認をした方がいいです。見た感じ、インフラおじさん的に難しい記述とかはないです。
+</p>
+
+<hr>
 <h3>20220109Mon</h3>
 
 <p>
